--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-light bg-light">
-                <span class="navbar-brand mb-0 h1">Calculator</span>
-        </nav>
 
 
-    <div class="container">
-        <div class="jumbotron">
+
+    <div class="square">
+        <div class="test">
             <h1 class="display-4">Calculator</h1>
- 
+
             <form>
                 <div class="form-group row">
                     <label for="validationCustom01" class="col-sm-2 col-form-label">Value 1</label>
